Ansible/ansible-stack.yaml
---
AWSTemplateFormatVersion: "2010-09-09"

Description: CF template to create instance to work with Ansible

Parameters:
  OwnerName:
    Type: String
    Description: Enter your name (no spaces)

  InstanceTypeParameter:
    Type: String
    Default: t3.small
    AllowedValues:
      - t2.micro
      - t3.small
    Description: <
      Enter t2.micro or t3.small.
      Default is t3.small as we need bigger instance to build Java application

Resources:
  AnsibleSG:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: Ansible security group
      GroupName: !Sub "${OwnerName}-sg"
      SecurityGroupEgress:
        - IpProtocol: tcp
          FromPort: 0
          ToPort: 65535
          CidrIp: 0.0.0.0/0
      SecurityGroupIngress:
        - IpProtocol: tcp
          FromPort: 22
          ToPort: 22
          CidrIp: 0.0.0.0/0
          Description: Allows SSH from anywhere
        - IpProtocol: tcp
          FromPort: 80
          ToPort: 80
          CidrIp: 0.0.0.0/0
          Description: Allows to access http from anywhere
        - IpProtocol: tcp
          FromPort: 8080
          ToPort: 8080
          CidrIp: 0.0.0.0/0
          Description: Allows to access petclinic on default port from anywhere
      VpcId: vpc-05f3b45a2b349c67e
      Tags:
        - Key: "CreatedBy"
          Value:
            Ref: OwnerName

  AnsibleInstance:
    Type: "AWS::EC2::Instance"
    Properties:
      IamInstanceProfile: SSMRole
      ImageId: "ami-0ed961fa828560210"
      KeyName: student
      InstanceType:
        Ref: InstanceTypeParameter
      NetworkInterfaces:
        - AssociatePublicIpAddress: true
          DeleteOnTermination: true
          DeviceIndex: "0"
          GroupSet:
            - Ref: AnsibleSG
          SubnetId: "subnet-0cd2733ab52b83592"
      Tags:
        - Key: "CreatedBy"
          Value:
            Ref: OwnerName
        - Key: "Name"
          Value: !Sub "${OwnerName}-ansible-instance"
      UserData:
        Fn::Base64:
          !Sub |
            #!/bin/bash -xe
            echo "Setting up ansible"
            sudo amazon-linux-extras install epel -y
            sudo amazon-linux-extras install ansible2 -y
            sudo yum install git -y
            sudo amazon-linux-extras install java-openjdk11


Outputs:
  ApplicationUrlPort80:
    Description: Petclinic application URL on port 80
    Value: !Sub
      - http://${PublicIP}
      - {PublicIP: !GetAtt AnsibleInstance.PublicIp}
  ApplicationUrlPort8080:
    Description: Petclinic application URL on port 8080
    Value: !Sub
      - http://${PublicIP}:8080
      - {PublicIP: !GetAtt AnsibleInstance.PublicIp}
